# serverless-python-template

./: .gitignore  package-lock.json  package.json  pyproject.toml
common/: alembiclib.py  alerts.py  aws.py  constants.py  exception_handler.py  exceptions.py  logger.py  utils.py
src/: config.development.json  config_example.py  serverless.yml  settings.py
src/alembic/: env.py
src/alembic/versions/: 7595ce67b03c_baseline.py
src/application/handler/: organization_handler.py
src/application/schemas/: organization.py
src/application/service/: organization_service.py
src/domain/: organization.py
src/infrastructure/: di_container.py  models.py
src/infrastructure/repositories/: base_repository.py  organization_repository.py
tests/: utils.py
tests/integration/: organization.py
